<resources>
    <string name="app_name">ToasterExample</string>
    <string name="show_toast_label">Show toast</string>
    <string name="show_toast_using_builder_label">Show toast using Builder</string>
    <string name="show_error_toast_label">Show Error toast</string>
    <string name="show_warning_toast_label">Show Warning toast</string>
    <string name="show_success_toast_label">Show Success Toast</string>
    <string name="show_toast_with_image_label">Show toast with image</string>
</resources>